# ButtHS

./: ButtHS.cabal  LICENSE  README.md  package.yaml  stack.yaml
app/: Echobot.hs  Greetbot.hs  Main.hs  PortalMaze.hs  RockPaperScissors.hs  XO.hs
haskell-telegram-api/: telegram-api.cabal
haskell-telegram-api/src/Servant/Client/: MultipartFormData.hs
haskell-telegram-api/src/Web/Telegram/API/Bot/API/: Core.hs
src/ButtHS/: Butt.hs  PipeT.hs  TgConv.hs  TgPipe.hs
src/ButtHS/TgConv/: Action.hs  Run.hs  Types.hs
