name:                telegram-api
version:             0.7.1.0
synopsis:            Telegram Bot API bindings
description:         High-level bindings to the Telegram Bot API
homepage:            http://github.com/klappvisor/haskell-telegram-api#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Rodiontsev
maintainer:          alex.rodiontsev@gmail.com
copyright:           Alexey Rodiontsev (c) 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Telegram.API.Bot
                     , Web.Telegram.API.Bot.API
                     , Web.Telegram.API.Bot.API.Messages
                     , Web.Telegram.API.Bot.API.Edit
                     , Web.Telegram.API.Bot.API.Queries
                     , Web.Telegram.API.Bot.API.Get
                     , Web.Telegram.API.Bot.API.Updates
                     , Web.Telegram.API.Bot.API.Chats
                     , Web.Telegram.API.Bot.API.Payments
                     , Web.Telegram.API.Bot.API.Stickers
                     , Web.Telegram.API.Bot.Data
                     , Web.Telegram.API.Bot.Responses
                     , Web.Telegram.API.Bot.Requests
  other-modules:       Web.Telegram.API.Bot.JsonExt
                     , Web.Telegram.API.Bot.API.Core
                     , Servant.Client.MultipartFormData
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , http-api-data
                     , http-client
                     , servant
                     , servant-client
                     , servant-client-core
                     , mtl
                     , text
                     , transformers
                     , http-media
                     , http-types
                     , mime-types
                     , bytestring
                     , string-conversions
                     , binary
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-binds

source-repository head
  type:     git
  location: https://github.com/klappvisor/haskell-telegram-api
